--- a/index.html
+++ b/index.html
@@ -3,8 +3,43 @@
   <head>
     <meta charset="utf-8">
     <title>Fluentify</title>
+    <link rel="stylesheet" href="./assets/css/master.css">
   </head>
   <body>
+    <!-- INIZIO NAV SUPERIORE E BANNER GRANDE -->
+    <header>
+      <div class="container bg-blue">
+        <nav class="nav-sup">
+          <img class="logo" src="./assets/img/logo.svg" alt="logo">
+          <ul>
+            <li>IL METODO</li>
+            <li>LA TECNOLOGIA</li>
+            <li>REAL-LIFE ENGLISH</li>
+            <li>SOLUZIONI AZIENDALI</li>
+          </ul>
+          <ul>
+            <li>DIVENTA UN TUTOR</li>
+            <li class="bordo">LOGIN</li>
+            <li class="bordo bg-green">STRUTTURA UN PIANO</li>
+          </ul>
+        </nav>
+      </div>
+      <div class="banner bg-blue">
+        <img class="back-head-img" src="./assets/img/background-header.png" alt="background">
+        <h1>Scegli  l'inglese studiato per i professionisti <br> <p class="bg-green" >STRUTTURA UN PIANO</p> </h1>
+
+      </div>
+    </header>
+    <!-- FINE NAV SUPERIORE E BANNER GRANDE -->
+    <!-- PARTE CENTRALE -->
+    <main>
+
+    </main>
+    <!-- FINE PARTE CENTRALE -->
+    <!-- STRUTTURA UN PIANO -->
+    <footer>
+
+    </footer>
 
   </body>
 </html>
