Piccoli ritocchi sul h1 e p del banner,racchiusi in un div

--- a/index.html
+++ b/index.html
@@ -26,7 +26,10 @@
       </div>
       <div class="banner bg-blue">
         <img class="back-head-img" src="./assets/img/background-header.png" alt="background">
-        <h1>Scegli  l'inglese studiato per i professionisti <br> <p class="bg-green" >STRUTTURA UN PIANO</p> </h1>
+        <div class="text">
+          <h1>Scegli  l'inglese studiato per i professionisti</h1>
+          <p class="bg-green" >STRUTTURA UN PIANO</p>
+        </div>
 
       </div>
     </header>
