continuo esercizio,aggiunto il box grigio

--- a/index.html
+++ b/index.html
@@ -28,14 +28,21 @@
         <img class="back-head-img" src="./assets/img/background-header.png" alt="background">
         <div class="text">
           <h1>Scegli  l'inglese studiato per i professionisti</h1>
-          <p class="bg-green" >STRUTTURA UN PIANO</p>
+          <p id="under-text" class="bg-green" >STRUTTURA UN PIANO</p>
         </div>
-
       </div>
     </header>
     <!-- FINE NAV SUPERIORE E BANNER GRANDE -->
     <!-- PARTE CENTRALE -->
     <main>
+      <section>
+        <div class="grey-box">
+          <div class="grey-box-text">
+            <h2 id="grey-box-text1">Le scuole di lingua tradizionale non sono efficaci</h2>
+            <p id="grey-box-text2">Solo un corso incentrato sulla Fluency può portare ad una soluzione definitiva concreta</p>
+          </div>
+        </div>
+      </section>
 
     </main>
     <!-- FINE PARTE CENTRALE -->
