--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- INIZIO NAV SUPERIORE E BANNER GRANDE -->
     <header>
       <div class="container bg-blue">
-        <nav class="nav-sup">
+        <nav>
           <img class="logo" src="./assets/img/logo.svg" alt="logo">
           <ul>
             <li>IL METODO</li>
@@ -23,13 +23,13 @@
             <li class="bordo bg-green">STRUTTURA UN PIANO</li>
           </ul>
         </nav>
-      </div>
-      <div class="banner bg-blue">
-        <img class="back-head-img" src="./assets/img/background-header.png" alt="background">
-        <div class="text">
-          <h1>Scegli  l'inglese studiato per i professionisti</h1>
-          <p id="under-text" class="bg-green" >STRUTTURA UN PIANO</p>
         </div>
+        <div class="banner bg-blue">
+          <img class="back-head-img" src="./assets/img/background-header.png" alt="background">
+          <div class="text">
+            <h1>Scegli  l'inglese studiato per i professionisti</h1>
+            <p id="under-text" class="bg-green" >STRUTTURA UN PIANO</p>
+          </div>
       </div>
     </header>
     <!-- FINE NAV SUPERIORE E BANNER GRANDE -->
