--- a/index.html
+++ b/index.html
@@ -43,6 +43,32 @@
           </div>
         </div>
       </section>
+      <!-- FINE PRIMA PARTE CENTRALE -->
+      <section>
+        <div class="row">
+          <div class="col-1">
+            <img class="img-row1" src="./assets/img/profile.svg" alt="profilo">
+            <!-- <h3>Piano formativo configurato sul proprio livello</h3>
+            <hr>
+            <p class="grey-text" >Un metodo improntato sullo speaking con percorsi basati esattamente sulle esigenze personali dei partecipanti.Tutto parte da un accurato test di partenza per definire il livello e impostare gli obiettivi da raggiungere.</p>
+ -->
+          </div>
+          <div class="col-2">
+            <img class="img-row1" src="./assets/img/computer.svg" alt="computer">
+            <!-- <h3>Affiancamento costante del tutor </h3>
+            <hr>
+            <p class="grey-text" >Scopri il syllabus,la guida per il tuo percorso.Scegli gli argomenti per passare al livello successivo e affrontali con i tutor nelle sessioni one-to-one.</p> -->
+          </div>
+          <div class="col-3">
+            <img class="img-row1" src="./assets/img/doc.svg" alt="doc">
+            <!-- <h3>Monitora i tuoi progressi costantemente</h3>
+            <hr>
+            <p class="grey-text" >Controlla i tuoi progressi con i dati elaborati dal nostro sistema.Hai il pieno controllo su miglioramenti e obiettivi raggiunti.</p> -->
+          </div>
+
+        </div>
+
+      </section>
 
     </main>
     <!-- FINE PARTE CENTRALE -->
