--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <!-- INIZIO NAV SUPERIORE E BANNER GRANDE -->
     <header>
-      <div class="container bg-blue">
+      <div class="container">
         <nav>
           <img class="logo" src="./assets/img/logo.svg" alt="logo">
           <ul>
@@ -24,11 +24,11 @@
           </ul>
         </nav>
         </div>
-        <div class="banner bg-blue">
+        <div class="banner">
           <img class="back-head-img" src="./assets/img/background-header.png" alt="background">
           <div class="text">
             <h1>Scegli  l'inglese studiato per i professionisti</h1>
-            <p id="under-text" class="bg-green" >STRUTTURA UN PIANO</p>
+            <p class="bg-green" >STRUTTURA UN PIANO</p>
           </div>
       </div>
     </header>
@@ -45,25 +45,32 @@
       </section>
       <!-- FINE PRIMA PARTE CENTRALE -->
       <section>
-        <div class="row">
+        <div class="row1">
           <div class="col-1">
             <img class="img-row1" src="./assets/img/profile.svg" alt="profilo">
-            <!-- <h3>Piano formativo configurato sul proprio livello</h3>
-            <hr>
-            <p class="grey-text" >Un metodo improntato sullo speaking con percorsi basati esattamente sulle esigenze personali dei partecipanti.Tutto parte da un accurato test di partenza per definire il livello e impostare gli obiettivi da raggiungere.</p>
- -->
           </div>
           <div class="col-2">
             <img class="img-row1" src="./assets/img/computer.svg" alt="computer">
-            <!-- <h3>Affiancamento costante del tutor </h3>
-            <hr>
-            <p class="grey-text" >Scopri il syllabus,la guida per il tuo percorso.Scegli gli argomenti per passare al livello successivo e affrontali con i tutor nelle sessioni one-to-one.</p> -->
           </div>
           <div class="col-3">
             <img class="img-row1" src="./assets/img/doc.svg" alt="doc">
-            <!-- <h3>Monitora i tuoi progressi costantemente</h3>
+          </div>
+        </div>
+        <div class="row2">
+          <div class="col-1">
+            <h3>Piano formativo configurato sul proprio livello</h3>
             <hr>
-            <p class="grey-text" >Controlla i tuoi progressi con i dati elaborati dal nostro sistema.Hai il pieno controllo su miglioramenti e obiettivi raggiunti.</p> -->
+            <p class="grey-text" >Un metodo improntato sullo speaking con percorsi basati esattamente sulle esigenze personali dei partecipanti.Tutto parte da un accurato test di partenza per definire il livello e impostare gli obiettivi da raggiungere.</p>
+          </div>
+          <div class="col-2">
+            <h3>Affiancamento costante del tutor </h3>
+            <hr>
+            <p class="grey-text" >Scopri il syllabus,la guida per il tuo percorso.Scegli gli argomenti per passare al livello successivo e affrontali con i tutor nelle sessioni one-to-one.</p>
+          </div>
+          <div class="col-3">
+            <h3>Monitora i tuoi progressi costantemente</h3>
+            <hr>
+            <p class="grey-text" >Controlla i tuoi progressi con i dati elaborati dal nostro sistema.Hai il pieno controllo su miglioramenti e obiettivi raggiunti.</p>
           </div>
 
         </div>
