--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         </div>
       </section>
       <!-- FINE PRIMA PARTE CENTRALE -->
+      <!-- INIZIO SECONDA PARTE CENTRALE -->
       <section>
         <div class="row1">
           <div class="col-1">
@@ -72,9 +73,21 @@
             <hr>
             <p class="grey-text" >Controlla i tuoi progressi con i dati elaborati dal nostro sistema.Hai il pieno controllo su miglioramenti e obiettivi raggiunti.</p>
           </div>
+        </div>
+      </section>
+      <!-- FINE SECONDA PARTE CENTRALE -->
+      <!-- INIZIO TERZA PARTE CENTRALE -->
+      <section>
+        <hr>
+        <div class="row3">
+          <div class="col100">
+            <img src="./assets/img/mountain.svg" alt="">
+          </div>
+          <div class="col100">
+            <h3>Scopri il tuo livello iniziale e struttura un piano personalizzato</h3>
+          </div>
 
         </div>
-
       </section>
 
     </main>
