--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <!-- FINE PRIMA PARTE CENTRALE -->
       <!-- INIZIO SECONDA PARTE CENTRALE -->
       <section>
-        <div class="row1">
+        <div class="row">
           <div class="col-1">
             <img class="img-row1" src="./assets/img/profile.svg" alt="profilo">
           </div>
@@ -57,7 +57,7 @@
             <img class="img-row1" src="./assets/img/doc.svg" alt="doc">
           </div>
         </div>
-        <div class="row2">
+        <div class="row">
           <div class="col-1">
             <h3>Piano formativo configurato sul proprio livello</h3>
             <hr>
@@ -79,9 +79,9 @@
       <!-- INIZIO TERZA PARTE CENTRALE -->
       <section>
         <hr>
-        <div class="row3">
+        <div class="row">
           <div class="col100">
-            <img src="./assets/img/mountain.svg" alt="">
+            <img classs="img-mountain" src="./assets/img/mountain.svg" alt="">
           </div>
           <div class="col100">
             <h3>Scopri il tuo livello iniziale e struttura un piano personalizzato</h3>
