--- a/index.html
+++ b/index.html
@@ -60,41 +60,60 @@
         <div class="row">
           <div class="col-1">
             <h3>Piano formativo configurato sul proprio livello</h3>
-            <hr>
+            <hr id="hr-btw-text" >
             <p class="grey-text" >Un metodo improntato sullo speaking con percorsi basati esattamente sulle esigenze personali dei partecipanti.Tutto parte da un accurato test di partenza per definire il livello e impostare gli obiettivi da raggiungere.</p>
           </div>
           <div class="col-2">
             <h3>Affiancamento costante del tutor </h3>
-            <hr>
+            <hr id="hr-btw-text" >
             <p class="grey-text" >Scopri il syllabus,la guida per il tuo percorso.Scegli gli argomenti per passare al livello successivo e affrontali con i tutor nelle sessioni one-to-one.</p>
           </div>
           <div class="col-3">
             <h3>Monitora i tuoi progressi costantemente</h3>
-            <hr>
+            <hr id="hr-btw-text" >
             <p class="grey-text" >Controlla i tuoi progressi con i dati elaborati dal nostro sistema.Hai il pieno controllo su miglioramenti e obiettivi raggiunti.</p>
           </div>
+          <hr id="rowhr" >
         </div>
       </section>
       <!-- FINE SECONDA PARTE CENTRALE -->
       <!-- INIZIO TERZA PARTE CENTRALE -->
       <section>
-        <hr>
         <div class="row">
-          <div class="col100">
-            <img classs="img-mountain" src="./assets/img/mountain.svg" alt="">
+          <div class="col50">
+            <img class="img-mountain" src="./assets/img/mountain.svg" alt="">
           </div>
-          <div class="col100">
-            <h3>Scopri il tuo livello iniziale e struttura un piano personalizzato</h3>
+          <div class="col50">
+            <h4>Scopri il tuo livello iniziale e struttura un piano personalizzato</h3>
+            <p>L'esperienza Fluentify parte sempre da un test di placement per avere una chiara visione del tuo inglese,ad oggi</p>
+            <a href="www.google.it">Scopri il nostro test di placement</a>
           </div>
-
         </div>
       </section>
-
+      <!-- FINE TERZA PARTE CENTRALE -->
     </main>
     <!-- FINE PARTE CENTRALE -->
-    <!-- STRUTTURA UN PIANO -->
+    <!-- FOOTER -->
     <footer>
-
+      <div class="grey-box-footer">
+        <div class="colfooter">
+          <h2>Struttura un piano</h2>
+        </div>
+        <div class="colfooter">
+          <div class="footer-text">
+            <span  >Sono</span>
+            <select name="Seleziona" required>
+              <option>Seleziona</option>
+            </select>
+            <button class="btn  bg-green" type="button" name="button">VISUALIZZA IL TUO PIANO</button>
+          </div>
+        </div>
+      </div>
+      <!-- FINE FOOTER E INIZIO NAV -->
+      <nav>
+          <input class="help" type="button" name="" value="HELP">
+          
+      </nav>
     </footer>
 
   </body>
