aggiunto position al nav

--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
         </div>
       </div>
       <!-- FINE FOOTER E INIZIO NAV -->
-      <nav>
-        <input class="help" type="button" name="" value="HELP">
-
-      </nav>
     </footer>
+    <nav  class="tasto-int" >
+      <input class="help" type="button" name="" value="HELP">
+
+    </nav>
 
   </body>
 </html>
