sistemato tasto help e backgr img al banner,esercizio quasi terminato

--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
           </ul>
         </nav>
         </div>
-        <div class="banner">
-          <img class="back-head-img" src="./assets/img/background-header.png" alt="background">
+        <div class="back-head-img">
           <div class="text">
             <h1>Scegli  l'inglese studiato per i professionisti</h1>
             <p class="bg-green" >STRUTTURA UN PIANO</p>
