Codice ordinato,esercizio terminato

--- a/index.html
+++ b/index.html
@@ -112,8 +112,7 @@
     </footer>
     <nav  class="tasto-int" >
       <input class="help" type="button" name="" value="HELP">
-
     </nav>
-
+    <!-- FINE NAV -->
   </body>
 </html>
