--- a/index.html
+++ b/index.html
@@ -59,17 +59,17 @@
         <div class="row">
           <div class="col-1">
             <h3>Piano formativo configurato sul proprio livello</h3>
-            <hr id="hr-btw-text" >
+            <hr class="hr-btw-text" >
             <p class="grey-text" >Un metodo improntato sullo speaking con percorsi basati esattamente sulle esigenze personali dei partecipanti.Tutto parte da un accurato test di partenza per definire il livello e impostare gli obiettivi da raggiungere.</p>
           </div>
           <div class="col-2">
             <h3>Affiancamento costante del tutor </h3>
-            <hr id="hr-btw-text" >
+            <hr class="hr-btw-text" >
             <p class="grey-text" >Scopri il syllabus,la guida per il tuo percorso.Scegli gli argomenti per passare al livello successivo e affrontali con i tutor nelle sessioni one-to-one.</p>
           </div>
           <div class="col-3">
             <h3>Monitora i tuoi progressi costantemente</h3>
-            <hr id="hr-btw-text" >
+            <hr class="hr-btw-text" >
             <p class="grey-text" >Controlla i tuoi progressi con i dati elaborati dal nostro sistema.Hai il pieno controllo su miglioramenti e obiettivi raggiunti.</p>
           </div>
           <hr id="rowhr" >
@@ -83,7 +83,7 @@
             <img class="img-mountain" src="./assets/img/mountain.svg" alt="">
           </div>
           <div class="col50">
-            <h4>Scopri il tuo livello iniziale e struttura un piano personalizzato</h3>
+            <h4>Scopri il tuo livello iniziale e struttura un piano personalizzato</h4>
             <p>L'esperienza Fluentify parte sempre da un test di placement per avere una chiara visione del tuo inglese,ad oggi</p>
             <a href="www.google.it">Scopri il nostro test di placement</a>
           </div>
@@ -102,6 +102,7 @@
           <div class="footer-text">
             <span  >Sono</span>
             <select name="Seleziona" required>
+              <option selected disabled>Seleziona</option>
               <option>Seleziona</option>
             </select>
             <button class="btn  bg-green" type="button" name="button">VISUALIZZA IL TUO PIANO</button>
@@ -111,7 +112,7 @@
       <!-- FINE FOOTER E INIZIO NAV -->
     </footer>
     <nav  class="tasto-int" >
-      <input class="help" type="button" name="" value="HELP">
+      <input class="help" type="button" name="Tasto-help" value="HELP">
     </nav>
     <!-- FINE NAV -->
   </body>
